Fri Jul 17 18:11:32 2009  Tanaka Akira  <akr@fsij.org>

	* struct.c (recursive_hash): extracted from rb_struct_hash.  reject
	  recursive key.
	  (rb_struct_hash): use recursive_hash.

Fri Jul 17 16:45:22 2009  Tanaka Akira  <akr@fsij.org>

	* array.c (recursive_hash): reject recursive key.

Fri Jul 17 15:20:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (DIGSPERINT): fix for LP64.

	* random.c (fill_random_seed): /dev/urandom is not available on
	  DOSISH systems.

	* random.c (random_equal): new method Random#==.

Fri Jul 17 13:35:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (rsock_getfamily): return AF_UNSPEC if getsockname
	  is failed.  [ruby-core:24383]
 
Fri Jul 17 01:22:57 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (recursive_join): raise ArgumentError for joining
	  recursive array.

	* array.c (ary_join_1): ditto.

	* test/ruby/test_array.rb (TestArray#test_join2): test updated for
	  recursive join.

Thu Jul 16 23:32:16 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb,ext/tk/config_list.in: ignore paths which includes
	  white space characters on Windows.[ruby-dev:38794]

	* ext/tk/lib/tk.rb: works on Cygwin (limitation:: Tk.mainloop works on
	  the main thread only).

Thu Jul 16 20:58:18 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole.rb (test_s_codepage_changed,
	  test_s_locale_set, test_s_locale_change): skip test if Japanese
	  locale is not installed. [ruby-core:23806]
	
	* test/win32ole/test_win32ole_variant.rb (test_conversion_str2cy):
	  dito.

Thu Jul 16 19:02:28 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb (Socket.tcp_server_sockets_port0): servers
	  is nil if an error occurs before setting it.

Thu Jul 16 18:42:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): suppress a warning.

Thu Jul 16 18:30:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
